dark mode and fix content

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -13,6 +13,7 @@ body {
   font-optical-sizing: auto;
   /* font-weight: 400;
   font-style: normal; */
+  overflow-x: hidden;
 }
 * {
   box-sizing: border-box;
